@@ -1,0 +1,5 @@
+str
+$notvar
+$foo
+bar
+var
